bookmarks controller and route created

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,6 @@
-<h1>My lists</h1>
-<% @lists.each do |list| %>
-  <%= puts list %>
-<% end %>
+<div class="container">
+  <h1>My lists</h1>
+  <% @lists.each do |list| %>
+    <%= puts list %>
+  <% end %>
+</div>
