--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,15 @@
-<div class="container">
-  <h1>My lists</h1>
-  <% @lists.each do |list| %>
-    <%= puts list %>
-  <% end %>
+<div class="banner mb-4 d-flex align-items-center justify-content-center">
+  <div class="text-center text-white">
+    <h1>Do a list of your favorite movies</h1>
+    <%= link_to 'Create a movie list', new_list_path, class: 'btn btn-danger' %>
+  </div>
 </div>
+<div class="container mt-3">
+  <div class="d-flex align-items-center justify-content-between mb-3">
+    <h1>My lists</h1>
+  </div>
+</div>
+
+<% @lists.each do |list| %>
+    <%= list.name %>
+  <% end %>
