--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container mt-3">
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name %>
     <%= f.submit %>
   <% end %>
+  <%= link_to 'Back', lists_path, class: 'btn btn-primary' %>
 </div>
