--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,8 +8,15 @@
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h1>My lists</h1>
   </div>
+  <div class="row">
+    <% @lists.each do |list| %>
+      <div class="co-12 colsm-6 col-md-4 mb-3">
+        <%= link_to list_path(list), class:'text-decoration-none' do %>
+          <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
+            <%= list.name %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<% @lists.each do |list| %>
-    <%= list.name %>
-  <% end %>
