--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,13 @@
+<div class="position-relative">
+  <div class="banner mb-4 d-flex align-items-center justify-content-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= @list.photo.attached? ? cl_image_path(@list.photo.key) : asset_path('list_background.jpeg') %>)">
+    <h1 class="text-white"><%= @list.name %></h1>
+  </div>
+  <span class="movie-tag"><%= pluralize(@list.movies.size, 'movie') %></span>
+</div>
 <div class="container">
-  <h1><%= @list.name %></h1>
+  <button type="button" class="btn btn-flat" data-toggle="modal" data-target="#new_movie_modal">
+        add a movie
+  </button>
   <% @list.movies.each do |movie| %>
     <%= image_tag movie.poster_url, alt: "", width: 200 %>
     <%= movie.title %>
