--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,14 +4,32 @@
   </div>
   <span class="movie-tag"><%= pluralize(@list.movies.size, 'movie') %></span>
 </div>
-<div class="container">
-  <button type="button" class="btn btn-flat" data-toggle="modal" data-target="#new_movie_modal">
-        add a movie
-  </button>
-  <% @list.movies.each do |movie| %>
-    <%= image_tag movie.poster_url, alt: "", width: 200 %>
-    <%= movie.title %>
-    <%= movie.rating %>
-    <%= movie.overview %>
-  <% end %>
+<div class="container mb-5">
+  <div class="d-flex justify-content-between my-4">
+    <div>
+      <%= link_to 'add a movie', new_list_bookmark_path(@list), class: 'btn btn-flat' %>
+      <%= link_to 'delete this list', list_path(@list), method: :delete, class: 'btn btn-cancel', data: { confirm: 'Are you sure you want to delete this list?' } %>
+      <%= link_to 'back', lists_path, class: 'btn btn-primary' %>
+    </div>
+  </div>
+  <div class="row my-2">
+    <% @list.movies.each do |movie| %>
+      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+      <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
+        <div class="bg-white rounded shadow h-100">
+          <%= image_tag movie.poster_url, alt: movie.title, class: 'movie-img rounded-top' %>
+          <div class="p-3 rounded-bottom d-flex flex-column">
+            <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
+            <small class="text-muted"><%= movie.overview %></small>
+            <div class="d-flex align-items-end justify-content-between pt-4">
+              <div>
+                <i class="fas fa-quote-left mr-2"></i><small class="flex-grow-1"><%= bookmark.comment %></small>
+              </div>
+              <small class="text-right flex-shrink-0"><%= link_to 'delete', bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"}, class: 'text-danger' %></small>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
